# derange

./: CMakeLists.txt  LICENSE  README.md  derange.cpp  derange.h  derange.ui  derange_en_US.ts  main.cpp
src/: CMakeLists.txt  config.h.in  editor.cpp  editor.h  main.cpp
ui/: editor.ui
